manifests/deployment.yml
apiVersion: apps/latest
kind: Deployment
metadata:
  name: phaseoneapp
spec:
  selector:
    matchLabels:
      app: phaseoneapp
  template:
    metadata:
      labels:
        app: phaseoneapp
    spec:
      containers:
      - name: webapp
        image: epamacr.azurecr.io/webapp
        resources:
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
