manifests/service.yml
apiVersion: latest
kind: Service
metadata:
  name: phaseoneapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: phaseoneapp
